# archinstall-rust

./: .gitignore  Cargo.toml  README.md  helpmenus.txt
.devcontainer/: devcontainer.json
lang/: en.json  uk.json
src/: lang.rs  main.rs
src/ui/menu/: display.rs  install.rs  language.rs  mod.rs  val.rs
src/ui/menu/installopt/: bootloader.rs  disk.rs  mod.rs  root.rs  timezone.rs  user.rs
src/ui/menu/installopt/diskinst/: diskmg.rs  formate.rs  mod.rs  mount.rs
src/ui/menu/instscript/: installer.rs
src/utils/: checkos.rs  mod.rs
test/app/: Cargo.toml
test/app/src/: main.rs
